# swig_test

./: CMakeLists.txt  make.sh
core.wasm/: CMakeLists.txt
core.wasm/CMake/Modules/: UrhoOptions.cmake
core.wasm/Source/: CMakeLists.txt
core.wasm/Source/Editor/Core/: CommonEditorActionBuilders.h
core.wasm/Source/Editor/Foundation/Shared/: InspectorWithPreview.cpp
core.wasm/Source/Editor/Project/: CreateComponentMenu.cpp  CreateComponentMenu.h
core.wasm/Source/Samples/109_KinematicCharacter/: KinematicCharacter.h
core.wasm/Source/Tools/PackageTool/: PackageTool.cpp
core.wasm/Source/Urho3D/: CMakeLists.txt
core.wasm/Source/Urho3D/Core/: ObjectCategory.h  ObjectReflection.h
core.wasm/Source/Urho3D/Engine/: Engine.cpp
core.wasm/Source/Urho3D/Graphics/: Camera.cpp  Skybox.cpp  StaticModel.cpp  StaticModel.h  StaticModelGroup.cpp
core.wasm/Source/Urho3D/IO/: Deserializer.cpp  Log.h
core.wasm/Source/Urho3D/Input/: FreeFlyController.cpp  FreeFlyController.h
core.wasm/Source/Urho3D/Math/: StringHash.cpp
core.wasm/Source/Urho3D/Resource/: Resource.cpp  ResourceCache.cpp
core.wasm/Source/Urho3D/Scene/: Serializable.cpp
core.wasm/Source/Urho3D/SystemUI/: MaterialInspectorWidget.cpp  MaterialInspectorWidget.h  ModelInspectorWidget.cpp  NodeInspectorWidget.cpp  NodeInspectorWidget.h  ResourceInspectorWidget.cpp  ResourceInspectorWidget.h  SceneHierarchyWidget.cpp  SceneHierarchyWidget.h  SerializableInspectorWidget.cpp  SerializableInspectorWidget.h  Texture2DWidget.cpp  Texture2DWidget.h  TransformGizmo.cpp  TransformGizmo.h  Widgets.cpp
core.wasm/Source/Urho3D/Utility/: FileSystemReflection.h  SceneRendererToTexture.cpp  SceneRendererToTexture.h
libs/lua/share/cmake/Lua/: LuaConfigVersion.cmake  LuaTargets-noconfig.cmake  (+1 more)
src/: main.cpp
src/com/: Floor.cpp  Floor.h  Skyscraper.cpp  Skyscraper.h
src/swig/: building_construction.i
web/: demo.data  demo.html  demo.js  demo.wasm  host.py
